# ai-agent-dev-lgens

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
02_langchain_core/: 01_model_call.md  01_model_call.py  02_messages_context.md  02_messages_context.py  03_params_streaming.md  03_params_streaming.py  04_lcel_chain.md  04_lcel_chain.py  05_structured_output.md  05_structured_output.py  06_structured_advanced.md  06_structured_advanced.py  README.md
03_tool_calling/: 01_define_and_bind.md  01_define_and_bind.py  02_tool_calls_anatomy.md  02_tool_calls_anatomy.py  03_manual_loop.md  03_manual_loop.py  04_parallel_calls.md  04_parallel_calls.py  05_tool_error.md  05_tool_error.py  06_tool_choice.md  06_tool_choice.py  README.md
04_custom_tool/: 01_tool_with_schema.md  01_tool_with_schema.py  02_description_routing.md  02_description_routing.py  03_multiple_tools.md  03_multiple_tools.py  04_system_prompt_design.md  04_system_prompt_design.py  05_tool_exception_recovery.md  05_tool_exception_recovery.py  06_approval_gate.md  06_approval_gate.py  README.md
05_langgraph_workflow/: 01_state_and_graph.md  01_state_and_graph.py  02_nodes_and_edges.md  02_nodes_and_edges.py  03_reducers.md  03_reducers.py  04_conditional_edge.md  04_conditional_edge.py  05_router_patterns.md  05_router_patterns.py  06_loop_and_recursion.md  06_loop_and_recursion.py  README.md
06_langgraph_agent/: 01_manual_agent_graph.md  01_manual_agent_graph.py  02_react_loop_observe.md  02_react_loop_observe.py  03_create_agent.md  03_create_agent.py  04_multi_tool_agent.md  (+6 more)
(+49 files in other folders)
