[project]
name = "ai-agent-dev-lgens"
version = "0.1.0"
description = "LG에너지솔루션 AI Agent 개발 과정 실습 (로컬 Python, uv 구동)"
requires-python = ">=3.12"
dependencies = [
    "langchain==1.3.4",
    "langgraph==1.2.4",
    "langchain-openai",
    "langchain-google-genai",
    "pydantic",
    "streamlit",
    "python-dotenv",
    "langmem>=0.0.30",
    "langgraph-checkpoint-sqlite>=3.1.0",
]

[dependency-groups]
dev = ["pytest"]

# 챕터 폴더는 패키지가 아니라 독립 실행 스크립트 모음이라 빌드 대상에서 제외합니다.
[tool.uv]
package = false
